--- a/todo/src/App.css
+++ b/todo/src/App.css
@@ -1,12 +1,66 @@
 .App {
   text-align: center;
 }
+h1 {
+  font-size: 100px;
+  font-family: monospace;
+}
 
+form {
+  margin-top: 100px;
+}
+.inny {
+  margin-top: 40px;
+  width: 600px;
+  height: 40px;
+  border-radius: 6px;
+  margin-left: 10px;
+  border-style: solid;
+  border-color: lightgrey;
+  border-width: thin;
+}
+.butt {
+  margin-left: 10px;
+  width: auto;
+  box-shadow: inset 0px 2px 0px 0px #ffffff;
+  background: linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
+  background-color: #f9f9f9;
+  border-radius: 7px;
+  border: 1px solid #dcdcdc;
+  display: inline-block;
+  cursor: pointer;
+  color: #666666;
+  font-family: Verdana;
+  font-size: 16px;
+  padding: 17px 62px;
+  text-decoration: none;
+  text-shadow: 0px 0px 0px #ffffff;
+  text-align: start;
+}
+
+.butt:hover {
+  background: linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%);
+  background-color: #e9e9e9;
+}
+
+.butt:active {
+  position: relative;
+  top: 2px;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
 }
-
+ul {
+  display: grid;
+  justify-content: center;
+  text-align: start;
+}
+li {
+  font-size: 40px;
+  font-family: monospace;
+  list-style: inside;
+}
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
