--- a/todo/src/App.css
+++ b/todo/src/App.css
@@ -47,6 +47,56 @@ form {
   position: relative;
   top: 2px;
 }
+
+button {
+  margin-left: 10px;
+  width: 50px;
+  box-shadow: inset 0px 2px 0px 0px #ffffff;
+  background: linear-gradient(to bottom, #f9f9f9 5%, #e9e9e9 100%);
+  background-color: #f9f9f9;
+  border-radius: 7px;
+  border: 1px solid #dcdcdc;
+  /* display: inline-block; */
+  cursor: pointer;
+  color: #666666;
+  font-family: Verdana;
+  font-size: 16px;
+  padding: 17px 62px;
+  text-decoration: none;
+  text-shadow: 0px 0px 0px #ffffff;
+  /* text-align: center;
+  display: table-cell;
+  vertical-align: middle; */
+}
+
+button:focus {
+  position: relative;
+  top: 2px;
+  background: #e5e5e5;
+  outline: none;
+  -webkit-box-shadow: inset 0px 0px 5px #c1c1c1;
+  -moz-box-shadow: inset 0px 0px 5px #c1c1c1;
+  box-shadow: inset 0px 0px 5px #c1c1c1;
+}
+
+button:hover {
+  /* background: linear-gradient(to bottom, #e9e9e9 5%, #f9f9f9 100%); */
+  background-color: #e9e9e9;
+}
+span {
+  position: absolute;
+  /* top: 50%;
+  left: 50%; */
+  transform: translate(-50%, -50%);
+}
+.buttonDiv {
+  margin: auto;
+  margin-top: 10px;
+}
+label {
+  font-family: monospace;
+  font-size: xx-large;
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
